Add dark and light theme styles, update logo path, and adjust index.qmd
- Created style-dark.css for dark theme styles and style-light.css for light theme styles.
- Updated the logo path in _quarto.yaml to use the online URL.
- Modified index.qmd to apply the new CSS files for light and dark themes.
- Removed the local logo image from the index.qmd and adjusted the layout for the logo display.

--- a/lectures/_quarto.yaml
+++ b/lectures/_quarto.yaml
@@ -40,7 +40,7 @@ julia:
     - '--project=@.'
     - '-t 8'
 # logo: https://pumas-assets.s3.amazonaws.com/CompanyLogos/DeepPumas/RGB/SVG/DeepPumas+Primaryv.svg
-logo: assets/DeepPumas+Primaryv.svg
+logo: https://pumas-assets.s3.amazonaws.com/CompanyLogos/DeepPumas/RGB/SVG/DeepPumas+Primaryv.svg
 format:
   revealjs:
     width: 1200
