--- a/lectures/Project.toml
+++ b/lectures/Project.toml
@@ -1,10 +1,19 @@
 [deps]
 AlgebraOfGraphics = "cbdf2221-f076-402e-a563-3d30da359d67"
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
 DeepPumas = "291c1e0f-52e3-4e13-8e48-890190cbb865"
+Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 Latexify = "23fbe1c1-3f47-55db-b15f-69d7ec21a316"
+Luxor = "ae8d54c2-7ccd-5906-9d76-62fc9837b5bc"
 Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
+MultivariateStats = "6f286f6a-111f-5878-ab1e-185364afe411"
+PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 Pumas = "4f2c3c20-a4ac-11e9-067b-e5872d3484cf"
 PumasPlots = "0c61e9cd-e02e-46f2-b961-0746d5a16e3b"
 QuartoTools = "5fded309-f5a0-485a-9129-b3749510da85"
+Setfield = "efcf1570-3423-57d1-acb7-fd33fddbac46"
 StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
+Transformers = "21ca0261-441d-5938-ace7-c90938fde4d4"
