--- a/lectures/_quarto.yaml
+++ b/lectures/_quarto.yaml
@@ -1,7 +1,8 @@
 project:
-    render:
-      - "*.qmd"
-      - "!assets/"
+  type: website
+  render:
+    - "*.qmd"
+    - "!assets/"
 
 author:
   - Niklas Korsbo
@@ -12,17 +13,21 @@ website:
   title: "DeepPumas for Viral Dynamics Workshop"
   navbar:
     left:
+      - href: index.qmd
+        text: "Home"
       - text: "Slides"
         menu:
           - text: "01 - Introduction" 
             href: 01-introduction.html
           - text: "02 - DeepNLME Part 1"
             href: 02-deepnlme-part1.html
-          - text: "03 - Complex Covariates" 
-            href: 03-complex-covariates.html
-          - text: "04 - Epidemiology Demo"
-            href: 04-epidemiology-demo.html
-          - text: "05 - Generative AI"
+          - text: "03 - Random Effects Revisited"
+            href: 03-random-effects-revisited.html
+          - text: "04 - Complex Covariates" 
+            href: 04-complex-covariates.html
+          - text: "05 - Epidemiology Demo"
+            href: 05-epidemiology-demo.html
+          - text: "06 - Generative AI"
             href: 05-generative-ai.html
     
 engines: ['julia']
@@ -35,20 +40,37 @@ execute:
   freeze: true
   echo: false
   warning: false
+
 julia:
   exeflags:
     - '--project=@.'
     - '-t 8'
+
 # logo: https://pumas-assets.s3.amazonaws.com/CompanyLogos/DeepPumas/RGB/SVG/DeepPumas+Primaryv.svg
 logo: https://pumas-assets.s3.amazonaws.com/CompanyLogos/DeepPumas/RGB/SVG/DeepPumas+Primaryv.svg
+
 format:
+  html:
+    toc: true
+    toc-location: left
+    code-fold: true
+    code-summary: "Click to show/hide code"
+    theme: 
+      light: [cosmo, CSS/style-light.css]
+      dark: [darkly, CSS/style-dark.css]
+    number-sections: true
+    css: 
+      - CSS/company.scss
+      - CSS/deeppumas.scss
+      - CSS/deeppumas-style.css
+    resources:
+      - "fonts/AmplitudeBook.otf"
   revealjs:
     width: 1200
     height: 800
     auto-stretch: true
     # leave a bit of breathing room around the edges
     margin: 0.15
-
     # allow content to shrink to 30% (but never grow beyond 100%)
     min-scale: 0.3
     max-scale: 1.0
