--- a/lectures/_quarto.yaml
+++ b/lectures/_quarto.yaml
@@ -82,7 +82,7 @@ format:
     progress: true
     slide-number: true
     smaller: false
-    footer: "DeepPumas Workshop 2025"
+    footer: '<a href="../index.html">DeepPumas Workshop 2025</a>'
     chalkboard: true
     theme: 
       - default
