Enhance styling and configuration for lightbox and update demo slide link

--- a/lectures/_quarto.yaml
+++ b/lectures/_quarto.yaml
@@ -102,3 +102,9 @@ format:
     fig-align: center
     resources:
       - "fonts/AmplitudeBook.otf"
+      
+lightbox: 
+  match: auto
+  effect: fade
+  desc-position: bottom
+  loop: false
