--- a/lectures/Project.toml
+++ b/lectures/Project.toml
@@ -13,7 +13,9 @@ MultivariateStats = "6f286f6a-111f-5878-ab1e-185364afe411"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 Pumas = "4f2c3c20-a4ac-11e9-067b-e5872d3484cf"
 PumasPlots = "0c61e9cd-e02e-46f2-b961-0746d5a16e3b"
+PumasUtilities = "148d11e5-1dc2-44df-acfd-e08afda85aab"
 QuartoTools = "5fded309-f5a0-485a-9129-b3749510da85"
 Setfield = "efcf1570-3423-57d1-acb7-fd33fddbac46"
 StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
 Transformers = "21ca0261-441d-5938-ace7-c90938fde4d4"
+Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
